# software-engineering-ws15

./: CMakeLists.txt  Makefile  celsiustofahrenheitconverter.cpp  celsiustofahrenheitconverter.hpp  celsiustokelvinconverter.cpp  celsiustokelvinconverter.hpp  centimetertoinchconverter.cpp  centimetertoinchconverter.hpp  command.cpp  command.hpp  converterFactory.cpp  converterFactory.hpp  convertererror.cpp  convertererror.hpp  currencyconverter.cpp  currencyconverter.hpp  decorator.cpp  decorator.hpp  dollartoeuroconverter.cpp  dollartoeuroconverter.hpp  eurotodollarconverter.cpp  eurotodollarconverter.hpp  eurotopoundsconverter.cpp  eurotopoundsconverter.hpp  fahrenheittocelsiusconverter.cpp  fahrenheittocelsiusconverter.hpp  inchtocentimeterconverter.cpp  inchtocentimeterconverter.hpp  inversionconverter.cpp  inversionconverter.hpp  kelvintocelsiusconverter.cpp  kelvintocelsiusconverter.hpp  kilometertomilesconverter.cpp  kilometertomilesconverter.hpp  lengthconverter.cpp  lengthconverter.hpp  main.cpp  milestokilometerconverter.cpp  milestokilometerconverter.hpp  poundstoeuroconverter.cpp  (+7 more)
test/: Makefile  convertertest.cpp
tests/: convertertest.cpp  tinytest
